--- a/src/main/java/com/mycompany/tmubank/dashboard.form
+++ b/src/main/java/com/mycompany/tmubank/dashboard.form
@@ -25,11 +25,11 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
-              <Component id="cheq" min="-2" max="-2" attributes="0"/>
+              <Component id="Deposit" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
-              <Component id="save" min="-2" max="-2" attributes="0"/>
+              <Component id="Withdraw" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="122" max="-2" attributes="0"/>
-              <Component id="MKT" min="-2" pref="172" max="-2" attributes="0"/>
+              <Component id="makeTransfer" min="-2" pref="172" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
@@ -41,9 +41,9 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="161" max="-2" attributes="0"/>
-                      <Component id="PB" min="-2" max="-2" attributes="0"/>
+                      <Component id="payBills" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="147" max="-2" attributes="0"/>
-                      <Component id="TH" min="-2" max="-2" attributes="0"/>
+                      <Component id="transactionhistory" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="243" max="-2" attributes="0"/>
@@ -63,14 +63,14 @@
               <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="cheq" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
-                  <Component id="save" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
-                  <Component id="MKT" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                  <Component id="Deposit" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                  <Component id="Withdraw" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                  <Component id="makeTransfer" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="PB" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
-                  <Component id="TH" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+                  <Component id="payBills" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+                  <Component id="transactionhistory" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="144" max="32767" attributes="0"/>
           </Group>
@@ -91,45 +91,60 @@
         <Property name="text" type="java.lang.String" value="DASHBOARD"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="cheq">
+    <Component class="javax.swing.JButton" name="Deposit">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Rockwell Nova" size="18" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Deposit"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="DepositMouseClicked"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="save">
+    <Component class="javax.swing.JButton" name="Withdraw">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Rockwell Nova" size="18" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Withdraw"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="WithdrawMouseClicked"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="MKT">
+    <Component class="javax.swing.JButton" name="makeTransfer">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Rockwell Nova" size="18" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Make Transfers"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="makeTransferMouseClicked"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="PB">
+    <Component class="javax.swing.JButton" name="payBills">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Rockwell Nova" size="18" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Pay Bills"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="payBillsMouseClicked"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="TH">
+    <Component class="javax.swing.JButton" name="transactionhistory">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Rockwell Nova" size="18" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Transaction History"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="transactionhistoryMouseClicked"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
