--- a/src/main/java/com/mycompany/tmubank/transactionhistory.form
+++ b/src/main/java/com/mycompany/tmubank/transactionhistory.form
@@ -118,6 +118,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="BACK&gt;"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel2MouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
